# terraform-google-enterprise-application

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  Makefile  README.md  go.work  run_tests.sh  versions.tf
.github/: .tflint.repo.hcl  conventional-commit-lint.yaml  release-please.yml  trusted-contribution.yml
.github/workflows/: go-lint.yaml  go-test.yaml  lint-tf-min.yaml  lint.yaml  stale.yml
1-bootstrap/: Dockerfile  README.md  backend.tf  backend.tf.example  bin-authz-image.tf  iam.tf  main.tf  outputs.tf  private_workerpool.tf  terraform.example.tfvars  terraform.tfvars  tf_image.tf  variables.tf  versions.tf  vpc-sc.tf
1-bootstrap/binauthz-attestation/: Dockerfile  create_binauthz_attestation.sh  parse_arguments.py
1-bootstrap/scripts/: push-to-repo.sh
2-multitenant/: README.md  terraform.example.tfvars  terraform.tfvars
3-appfactory/: README.md
3-appfactory/apps/: README.md  main.tf  outputs.tf  variables.tf
3-fleetscope/: README.md  common.auto.example.tfvars  cymbal-bank-isolation-example.yaml  nonproduction.auto.example.tfvars  terraform.example.tfvars
4-appfactory/: README.md  terraform.example.tfvars
4-fleetscope/: README.md
5-appinfra/: README.md
6-appsource/: README.md
docs/: TROUBLESHOOTING.md  namespace_isolation.md  opa_policies.md  remote_repository_kueue_installation.md  upgrading_to_v0.3.0.md  upgrading_to_v0.4.0.md
examples/: README.md
examples/high-throughput-compute-standalone/ui/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
examples/hpc/: README.md
scripts/: gitlab_startup.sh
(+1340 files in other folders)
