[project]
name = "agent-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-bigquery-storage>=2.27.0",
    "google-cloud-bigquery[pandas]>=3.27.0",
    "gradio>=5.20.0",
    "pyarrow>=18.0.0",
    "pyyaml>=6.0.2",
]
